<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hypersocket</groupId>
	<artifactId>hypersocket-framework</artifactId>
	<version>2.3.8-LOCAL</version>
	<url>http://www.hypersocket.com/</url>
	<packaging>pom</packaging>
	<name>Hypersocket Framework</name>
	<description>A framework for building JSON web services based on Spring/Hibernate within a high performance HTTP server based on Netty.</description>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<licenses>
		<license>
			<name>GNU General Public License v3</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<distributionManagement>
		<repository>
			<id>opensource-releases</id>
			<url>https://artifactory.jadaptive.com/opensource-releases</url>
		</repository>
		<snapshotRepository>
			<id>opensource-snapshots</id>
			<url>https://artifactory.jadaptive.com/opensource-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<url>http://github.com/ludup/hypersocket-framework</url>
		<connection>scm:git:https://github.com/ludup/hypersocket-framework</connection>
		<developerConnection>scm:git:https://github.com/ludup/hypersocket-framework</developerConnection>
	</scm>

	<developers>
		<developer>
			<id>lee</id>
			<name>Lee David Painter</name>
			<email>lee@hypersocket.com</email>
		</developer>
		<developer>
			<id>brett</id>
			<name>Brett Smith</name>
			<email>brett@logonbox.com</email>
		</developer>
	</developers>

	<properties>
		<org.springframework.version>4.3.1.RELEASE</org.springframework.version>
		<aspectj.version>1.8.13</aspectj.version>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>hypersocket-common</module>
		<module>hypersocket-core</module>
		<module>hypersocket-servlet-common</module>
		<module>hypersocket-server</module>
		<module>hypersocket-json</module>
		<module>hypersocket-netty</module>
		<module>hypersocket-inbox</module>
		<module>hypersocket-tasks</module>
		<module>hypersocket-templates</module>
		<module>hypersocket-tests</module>
	</modules>

	<dependencies>
		<!-- SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>1.68</version>
			</dependency>
	
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcmail-jdk15on</artifactId>
				<version>1.68</version>
			</dependency>
	
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk15on</artifactId>
				<version>1.68</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<directory>target</directory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.nervepoint</groupId>
				<artifactId>google-translate-v2-java-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>translate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<inherited>true</inherited>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-javadoc-plugin</artifactId>
				    <version>3.2.0</version>
				    <configuration>
						<encoding>UTF-8</encoding>
						<excludePackageNames>**.impl.*</excludePackageNames>
	
						<!-- https://bugs.openjdk.java.net/browse/JDK-8212233 -->
						<source>8</source>
						<additionalparam>-Xdoclint:none</additionalparam>
                	</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.6.0</version>
				</plugin>
				<plugin>
					<groupId>com.nervepoint</groupId>
					<artifactId>google-translate-v2-java-maven-plugin</artifactId>
					<version>0.9.0-SNAPSHOT</version>
					<configuration>
						<apikey>${googleAPIKey}</apikey>
						<cacheTag>main</cacheTag>
						<sourceDirectory>${basedir}/src/main/resources/i18n</sourceDirectory>
						<targetDirectory>${basedir}/target/classes/i18n</targetDirectory>
						<languages>da,nl,fi,fr,de,it,no,pl,ru,sv,es,ja,he</languages>
						<failOnMissingSourceDir>false</failOnMissingSourceDir>
						<noTranslatePattern>
							<param><![CDATA[<a.*href.*>.*</a>]]></param>
							<param>\$\{[/|!]*[a-zA-Z_\.0-9]*\}</param>
							<param>\%\{[/|!]*[a-zA-Z_\.0-9]*\}</param>
							<param>\=\{[/|!]*[a-zA-Z_\.0-9]*\}</param>
							<param>\#\{[/|!]*[a-zA-Z_\.0-9]*\}</param>
							<param>\{[0-9]+\}</param>
							<param><![CDATA[\&lt\;[\w/]+\&gt\;]]></param>
						</noTranslatePattern>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>translate</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.nervepoint</groupId>
										<artifactId>
											google-translate-v2-java-maven-plugin
										</artifactId>
										<versionRange>
											[0.9.0,)
										</versionRange>
										<goals>
											<goal>translate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<configuration>
								<!-- TODO: Why is this STILL broken! -->
								<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
	
	<repositories>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots />
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>sonatype-oss-shapshots-plugins</id>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<snapshots/>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
		<pluginRepository>
			<id>opensource-snapshots</id>
			<url>https://artifactory.jadaptive.com/opensource-snapshots</url>
			<snapshots/>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>
</project>
